<resources>
    <string name="app_name">My Movies</string>
    <string name="detail_name">Details</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

    <!-- Provider -->
    <string name="content_authority">com.retroquack.kwak123.mymovies</string>

    <!-- Spinner strings -->
    <string name="pref_popular">Popular</string>
    <string name="pref_rating">Top Rated</string>
    <string name="pref_favorites">Favorites</string>

    <!-- Settings strings -->
    <string name="action_settings">Settings</string>
    <string name="default_toast">Coming soon</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About/Credits</string>
    <string name="action_delete">Clear Favorites</string>

    <!--About Dialog strings -->
    <string name="about_header">About</string>
    <string name="about_detail">This app was made for Project 1 of the Udacity Developer Nanodegree course. Much of this code was taken directly from previous Udacity code and refactored to fit this project. Thanks for reviewing!</string>
    <string name="tmdb_attribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>

    <!-- Main Activity strings -->
    <string name="no_movie">Error loading movie details</string>

    <!-- Details strings -->
    <string name="favorite">Favorite</string>
    <string name="add_favorite">Add to favorites?</string>
    <string name="remove_favorite">Remove from favorites?</string>
    <string name="review_header">Reviews</string>
    <string name="trailer_header">Trailers</string>
    <string name="splash_text">Select a movie</string>
    <string name="no_connection_string">Sorry, we couldn\'t load these results. Are you connected to the internet?</string>
    <string name="no_review">No reviews found!</string>
    <string name="no_trailer">No trailers found!</string>
    <string name="fail_connection">Failed to load video</string>

    <!-- Error strings -->
    <string name="error_data">Error fetching data</string>
    <string name="error_network">No network connection</string>

</resources>
