<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/about_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/about_detail"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/tmdb_logo"
            android:src="@mipmap/tmdb_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tmdb_attribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmdb_attribution"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>