<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/backdrop_detail_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster_detail_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                android:focusable="false"
                android:clickable="false"
                android:transitionName="poster"/>

            <LinearLayout
                android:id="@+id/movie_details_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MovieTitle" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/movie_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:fontFamily="sans-serif-medium"/>
            <CheckBox
                android:id="@+id/checkbox_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_favorites_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:visibility="gone">

            <TextView
                style="@style/ConfirmMessage"
                android:id="@+id/details_message"/>

            <TextView
                style="@style/ConfirmButton"
                android:id="@+id/details_no"
                android:layout_alignParentEnd="true"
                android:duplicateParentState="true"
                android:text="@string/button_no"/>

            <TextView
                style="@style/ConfirmButton"
                android:id="@+id/details_yes"
                android:layout_toStartOf="@id/details_no"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:duplicateParentState="true"
                android:text="@string/button_yes"/>

        </RelativeLayout>

        <View style="@style/Divider"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"/>

        <include layout="@layout/container_trailer"/>

        <include layout="@layout/container_reviews"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

